--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /Bank Management System(Complete)/nbproject/private/
 /Bank Management System(Complete)/build/
+/Bank Management System(Complete)/dist/
